# AlphaZero_in_Pan

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  main.py  mcts_template.py  play.py  pyproject.toml
.github/workflows/: ci.yaml
configs/: default.yaml  play.yaml
deck/: game_logic.py
game_logic/: game_logic.py
monte-carlo/: game_state.py  monte_carlo.py
neural-network/: perceptron.ipynb
src/: config.py  game_logic.py
src/game_logic/: game_logic.py
src/gui/: app.py  card_renderer.py  config.py  game_controller.py
src/mcts/: mcts.py  neural_networks.py  state_processors.py
src/ml/: learning.py  neural_networks.py  policy_net.py  value_net.py
tests/: test_game_logic.py
tests/gui/: test_app.py  test_card_renderer.py  test_config.py  test_game_controller.py
tests/mcts/: test_mcts.py  test_state_processors.py
tests/ml/: test_neural_networks.py  test_policy_net.py  test_value_net.py
