[project]
name = "AlphaZero_in_Pan"
version = "0.1.0"
description = "Using AlphaZero algorithm to play the game of Pan"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.3",
    "pre-commit>=4.3.0",
]

[project.optional-dependencies]
ml = [
    "flax>=0.12.0",
    "jax>=0.7.2",
    "optax>=0.2.6",
]

[dependency-groups]
dev = [
    "ruff>=0.6.4",
]

# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 150

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # import sorting
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"
